add parcel and soils area mapping

--- a/agrohelp/web/index.html
+++ b/agrohelp/web/index.html
@@ -54,5 +54,8 @@
       });
     });
   </script>
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCKRuKSzE3ZJPmYdl4YVQFSiDdz6mZXkVs&libraries=drawing,visualization,places">
+  </script>
 </body>
 </html>
